SERVER-60727: Remove mixed mode updates on local.system.replset