src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp
@@ -771,8 +771,6 @@ StatusWith<std::string> WiredTigerRecordStore::generateCreateString(
         !ident.startsWith("internal-") &&
         // TODO (SERVER-60754): Remove special handling for setting multikey.
         !ident.startsWith("_mdb_catalog") &&
-        // TODO (SERVER-60727): Remove special handling for 'local.system.replset'.
-        ns != "local.system.replset" &&
         // TODO (SERVER-58410): Remove special handling for minValid.
         ns != "local.replset.minvalid" &&
         // TODO (SERVER-60753): Remove special handling for index build during recovery.
